@@ -18,6 +18,7 @@
             <id>Chrome</id>
             <properties>
                 <browser>chrome</browser>
+                <testNGPath>${basedir}/src/main/resources/testng/jenkins.xml</testNGPath>
                 <platform.env>pc</platform.env>
             </properties>
         </profile>
@@ -38,6 +39,42 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+
+            <!--Plugin for create XML-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.10</version>
+                <configuration>
+                    <argLine>-XX:PermSize=256m -XX:MaxPermSize=1024m</argLine>
+                    <skip>false</skip>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${testNGPath}</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -52,7 +89,7 @@
         <dependency>
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
-            <version>4.9.1</version>
+            <version>4.11.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -61,6 +98,19 @@
             <artifactId>java-client</artifactId>
             <version>4.1.2</version>
         </dependency>
+
+        <!--Need for create XML listener-->
+        <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>0.9.11</version>
+        <exclusions>
+            <exclusion>
+                <artifactId>guava</artifactId>
+                <groupId>com.google.guava</groupId>
+            </exclusion>
+        </exclusions>
+    </dependency>
 
     </dependencies>
 </project>
